security: tighten CORS origin handling